--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-body{
+body {
   margin: 0;
   padding: 0;
 }
 
-.search-engine{
+.search-engine {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -11,7 +11,8 @@ body{
   margin-bottom: 30px;
   margin-top: 10px;
 }
-.search-engine input{
+
+.search-engine input {
   width: 70%;
   height: 45px;
   border: 1px solid;
@@ -22,7 +23,8 @@ body{
   color: #555555;
   padding: 2px 15px;
 }
-.search-engine button{
+
+.search-engine button {
   border: none;
   border-radius: 8px;
   background-color: #000;
@@ -33,7 +35,52 @@ body{
   padding: 13px 15px;
 }
 
-.App{
+.App {
   text-align: center;
-  
+  margin: 50px auto 0px;
+  width: 90%;
+  max-width: 700px;
+  border-radius: 20px;
+  height: 470px;
+  padding: 20px 15px;
+  background: rgb(0, 255, 166);
+
+}
+.city-name{
+  margin-bottom: 10px;
+  color: #000;
+}
+.loading{
+  font-size: 60px;
+  font-weight: bolder;
+  color: #000;
+}
+
+.date{
+  font-size: 18px;
+  font-weight: 500;
+  font-style: italic;
+}
+.temp{
+  font-size: 64px;
+  color: #000;
+  font-weight: bold;
+  text-align: center;
+}
+.description{
+  color: #000;
+  font-size: 22px;
+  font-weight: 500;
+  margin-top: 0px;
+  margin-bottom: 20px;
+}
+.weather-info{
+  justify-content: space-evenly;
+  display: flex;
+  align-items: center;
+  margin-top: 20px;
+  padding: 0px 20px;
+  font-size: 20px;
+  font-weight: bold;
+  text-align: center;
 }
